FiX: atualizando algumas rotas do swager
